--- a/package.json
+++ b/package.json
@@ -1,65 +1,68 @@
 {
-    "name": "vue.charts.css",
-    "version": "0.0.20",
-    "description": "Open Source Vue wrapper for Charts CSS (chartscss.org)",
-    "main": "dist/vue-charts-css.min.js",
-    "author": "Matthew Spence",
-    "license": "MIT",
-    "repository": {
-        "type": "git",
-        "url": "git://github.com/Vue-Charts-CSS/vue.charts.css.git"
-    },
-    "keywords": [
-        "css",
-        "html",
-        "css-framework",
-        "charts",
-        "chart",
-        "scss",
-        "vue",
-        "vue js",
-        "sass",
-        "vue chart css",
-        "ui-component"
-    ],
-    "scripts": {
-        "watch": "node_modules/.bin/webpack --config=webpack.config.js --progress --watch --color --mode=development",
-        "production": "node_modules/.bin/webpack --config=webpack.config.js --progress --color --mode=production"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.13.10",
-        "babel-loader": "^8.2.2",
-        "css-loader": "^5.1.3",
-        "mini-css-extract-plugin": "^1.3.9",
-        "sass": "^1.32.8",
-        "sass-loader": "^10.0.0",
-        "style-loader": "^2.0.0",
-        "vue-loader": "^15.9.6",
-        "vue-style-loader": "^4.1.3",
-        "vue-template-compiler": "^2.6.12",
-        "webpack": "^4.0.0",
-        "webpack-cli": "^4.5.0"
-    },
-    "dependencies": {
-        "charts.css": "^0.9.0",
-        "vue": "^2.6.12"
-    },
-    "sideEffects": false,
-    "cssnano": {
-        "preset": [
-            "default",
-            {
-                "discardComments": {
-                    "removeAll": true
-                }
-            }
-        ]
-    },
-    "browserslist": [
-        ">1%",
-        "not dead",
-        "not ie >= 0",
-        "not op_mini all",
-        "last 2 versions"
+  "name": "vue.charts.css",
+  "version": "0.0.21",
+  "description": "Open Source Vue wrapper for Charts CSS (chartscss.org)",
+  "main": "dist/vue-charts-css.min.js",
+  "author": "Matthew Spence",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/Vue-Charts-CSS/vue.charts.css.git"
+  },
+  "keywords": [
+    "css",
+    "html",
+    "css-framework",
+    "charts",
+    "chart",
+    "scss",
+    "vue",
+    "vue js",
+    "sass",
+    "vue chart css",
+    "ui-component"
+  ],
+  "scripts": {
+    "watch": "node_modules/.bin/webpack --config=webpack.config.js --progress --watch --color --mode=development",
+    "production": "node_modules/.bin/webpack --config=webpack.config.js --progress --color --mode=production"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.13.10",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.1.3",
+    "mini-css-extract-plugin": "^1.3.9",
+    "sass": "^1.32.8",
+    "sass-loader": "^10.0.0",
+    "style-loader": "^2.0.0",
+    "vue-loader": "^15.9.6",
+    "vue-style-loader": "^4.1.3",
+    "vue-template-compiler": "^2.6.12",
+    "webpack": "^5.51.1",
+    "webpack-cli": "^4.8.0"
+  },
+  "dependencies": {
+    "charts.css": "^0.9.0",
+    "vue": "^2.6.12"
+  },
+  "sideEffects": false,
+  "cssnano": {
+    "preset": [
+      "default",
+      {
+        "discardComments": {
+          "removeAll": true
+        }
+      }
     ]
+  },
+  "browserslist": [
+    ">1%",
+    "not dead",
+    "not ie >= 0",
+    "not op_mini all",
+    "last 2 versions"
+  ],
+  "engines": {
+    "yarn": "YARN NO LONGER USED - use npm instead."
+  }
 }
